# zambretti-integration

./: .github:workflows:hacs.yml  .github:workflows:lint.yml  .github:workflows:pre-commit.yml  .github:workflows:validate.yaml  .pre-commit-config.yaml  LICENSE  README.md  hacs.json  pyproject.toml  pyproject.toml.json  requirements_test.txt
.github/workflows/: lint.yml  tests.yml
custom_components/: LICENSE.txt
custom_components/zambretti/: __init__.py  ai_prompt.py  config_flow.py  const.py  dictionaries.py  fog_analysis.py  helpers.py  low_estimator.py  manifest.json  options_flow.py  pressure_analysis.py  readme.md  region.py  sensor.py  services.yaml  temperature_analysis.py  weather_processing.py  weather_processing_advanced.py  wind_analysis.py  wind_systems.py
tests/: conftest.py  test_config_flow.py  test_setup.py
zambretti/: __init__.py  const.py  fog_analysis.py  manifest.json  pressure_analysis.py  readme.md  sensor.py  weather_processing.py  wind_analysis.py
